--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 html, body{
     margin: 0;
     padding: 0;
@@ -19,38 +20,61 @@ html, body{
     margin-left:20px;
     margin-right:20px;
 }
+#title{
+    flex-basis: 100%;
+    margin-top: 20px;
+    font-size: 22px;
+    font-weight: bold;
+}
+#subtitle{
+    flex-basis: 100%;
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 600;
+}
 .scedule-item{
     height: 100px;
     border: 1px solid black;
     display: inline-block;
+    box-sizing:content-box;
     margin-top: 20px;
+    position: relative;
+    margin-left:-1px;
 }
 .scedule-item-title{
-    font-size: 18px;
+    position:absolute;
+    top:5px;
+    left:5px;
+    font-size: 14px;
     font-weight: bold;
-    color: #000;
-    margin-bottom: 10px;
 }
 .scedule-item-width1{
-    width: 50px;
-}
-.scedule-item-width2{
     width: 100px;
 }
-.scedule-item-width3{
+.scedule-item-width2{
     width: 150px;
 }
-.scedule-item-width4{
+.scedule-item-width3{
     width: 200px;
+}
+.scedule-item-width4{
+    width: 250px;
 }
 
 .scedule-item-type1{
-    background-color: blue;
+    background-color: rgb(185, 243, 255)
 }
 .scedule-item-type2{
-    background-color: red;
+    background-color: rgb(146, 213, 227)
 }
 .scedule-item-type3{
-    background-color: gray;
+    background-color: rgb(243, 243, 243)
+}
+
+.scedule-item-weeks{
+    position:absolute;
+    bottom:5px;
+    left:5px;
+    font-size: 12px;
 }
 
